2008-03-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added a test for large file.
	* test/MetalinkProcessorTest.cc (testLargeFileSize): 

2008-03-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that file size is ignored if size > INT32_MAX
	* src/SizeMetalinkParserState.cc (endElement): 

2008-03-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Bump up version number to 0.13.0
	* configure.ac
	
	* Release 0.13.0

2008-03-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated Makfefile.am to make 'make dist' work.
	Now packaged filename is aria2c-VERSION.tar.bz2.
	Added README, README.html, and aria2c.1.html to dist_doc_DATA.
	Added LICENSE.OpenSSL to dist_noinst_DATA.

	Large file support is now configured by configure script.
	* configure.ac
	
	Removed unsused source files
	* src/
	* test/

	Removed PeerDecl.h and BtContextDecl.h. typedefs are removed to
	Peer.h and BtContext.h respectively.
	* src/Peer.h
	* src/BtContext.h

	Updated translations.
	Added Polish, Thai, Indonesian, Norwegian Nynorsk, Hungarian
	translations. Great thanks to all translators!;)
	* po/*.{po, gmo}
	
2008-02-29  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Create MessageDigestHelper::staticSHA1DigestInit() which uses
	statically declared sha1 MessageDigestContext.
	* src/BtPieceMessage.cc: Use staticSHA1DigestInit() to avoid
	initialization of short-lived MessageDigestContext.
	* src/MessageDigestHelper.{h, cc}
	* src/main.cc
	
	Now DownloadCommand has a reference to MessageDigestContext to avoid
	the initialization of MessageDigestContext every time in validating
	chunk checksum.
	* src/DownloadCommand.{h, cc}
	
2008-02-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Add a file descriptor which connected to fast peer(latency<1500) to
	select(). This change reduced CPU load.
	* src/PeerInteractionCommand.cc
	* src/DefaultBtInteractive.{h, cc}
	* src/BtInteractive.h
