@@ -1,5 +1,10 @@
 2008-03-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Fixed compilation error without ares/c-ares
+	* src/NameResolver.h: 
+
+2008-03-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Added a test for large file.
 	* test/MetalinkProcessorTest.cc (testLargeFileSize): 
 
